# ott

./: .codecov.yml  .coveragerc  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .style.yapf  CITATION.bib  CONTRIBUTING.md  Entropic_Maps_Reynaud_Tutorial.ipynb  MANIFEST.in  README.md  constrained_sinkhorn.md  environment.yml  meyer_test.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  version.py
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/workflows/: gpu_tests.yaml  lint.yml  notebook_tests.yml  publish.yml  publish_to_pypi.yml  tests.yml
docs/: Makefile  conf.py  core.rst  geometry.rst  glossary.rst  index.rst  math.rst  references.bib  references.rst  requirements.txt  tools.rst  utils.rst
docs/experimental/: index.rst  mmsinkhorn.rst
docs/initializers/: index.rst  linear.rst  nn.rst  quadratic.rst
docs/neural/: data.rst  datasets.rst  duality.rst  flow_models.rst  gaps.rst  index.rst  methods.rst  models.rst  networks.rst  solvers.rst
docs/notebooks/: GWLRSinkhorn.ipynb  Hessians.ipynb  LRSinkhorn.ipynb  MetaOT.ipynb  OTT_&_POT.ipynb  One_Sinkhorn.ipynb  Sinkhorn_Barycenters.ipynb  Supervised_WMD.ipynb  application_biology.ipynb  fairness.ipynb  gmm_pair_demo.ipynb  gromov_wasserstein.ipynb  gromov_wasserstein_multiomics.ipynb  gromov_wassertein_multiomics.ipynb  icnn_inits.ipynb  introduction_grid.ipynb  neural_dual.ipynb  point_clouds.ipynb  soft_ranks.ipynb  soft_sort.ipynb  wasserstein_barycenters_gmms.ipynb
docs/problems/: index.rst  linear.rst  nn.rst  quadratic.rst
docs/solvers/: index.rst  linear.rst  nn.rst  quadratic.rst
docs/spelling/: latex.txt  misc.txt  technical.txt
docs/tutorials/: 2024_assignment_bonnery_entropic_maps.ipynb  CHEMS_OTT_Tutorial_annealing_Sinkhorn.ipynb  ENOT.ipynb  Entropic_Estimation.ipynb  Entropic_map_estimation.ipynb  FUGWBarycenter-Copy1.ipynb  FUGWBarycenter.ipynb  FUGW_Barycenters.ipynb  GWLRSinkhorn.ipynb  Hessians.ipynb  JulienGuibert_AnnealedSinkhorn.ipynb  MetaOT.ipynb  MongeBregmanOccam.ipynb  Monge_Bregman_Occam_estimator.ipynb  Monge_Gap.ipynb  OCAM_estimator.ipynb  OTT_&_POT.ipynb  OTT_Project_Maxime_APPERT_Nicolas_ALEMANY.ipynb  OT_CHAHBOUN_ESSALIH.ipynb  OT_project_Annealed_Sinkhorn_Channdeth_SOK.ipynb  OT_project_MBO.ipynb  One_Sinkhorn.ipynb  Project_theo_paquier.ipynb  SSN.ipynb  Sinkhorn_for_constrained_OT_problems.ipynb  Tutorial_DEREPAS.ipynb  a_sinkhorn_type_algorithm_for_constrained_optimal_transport.ipynb  annealed_OT.ipynb  annealed_sinkhorn.ipynb  annealed_sinkhorn_demo.py  annealed_sinkhorn_tutorial.ipynb  basic_ot_between_datasets.ipynb  entropic_map.ipynb  entropic_maps.ipynb  gmm_pair_demo.ipynb  gromov_wasserstein.ipynb  gromov_wasserstein_multiomics.ipynb  icnn_inits.ipynb  index.rst  mmsink.ipynb  (+6 more)
examples/fairness/: config.py  data.py  losses.py  main.py  models.py  train.py
examples/soft_error/: config.py  data.py  losses.py  main.py  model.py  train.py
my_scripts_notebooks/: barycenter_euclidean.ipynb  barycenter_euclidean_without_diva.py  gauss_mixture_utils.py  gaussian_barycenter_fixed_point.py  mixture_gaussian_barycenters.ipynb  mixture_gaussian_barycenters_draft.ipynb  mixture_of_1d_gaussians.ipynb
ott/: __init__.py  _version.py  bluze.textproto  typing.py  utils.py  version.py
ott/core/: __init__.py  _math_utils.py  anderson.py  bar_problems.py  continuous_barycenter  continuous_barycenter.py  dataclasses.py  decomposition.py  discrete_barycenter.py  fixed_point_loop.py  gromov_wasserstein.py  gw_barycenter.py  icnn.py  implicit_differentiation.py  initializers.py  initializers_lr.py  layers.py  linear_problems.py  momentum.py  neuraldual.py  potential.py  potentials.py  problems.py  quad_initializers.py  quad_problems.py  segment.py  sinkhorn.py  sinkhorn_bures_test.py  sinkhorn_differentiability_grid_1_test.py  sinkhorn_differentiability_grid_2_test.py  sinkhorn_differentiability_grid_3_test.py  sinkhorn_differentiability_grid_test.py  sinkhorn_differentiability_test.py  sinkhorn_divergence.py  sinkhorn_divergence_differentiability_test.py  sinkhorn_divergence_test.py  sinkhorn_grid_test.py  sinkhorn_implicit_lse_test.py  sinkhorn_implicit_test.py  sinkhorn_implicit_test_lse.py  (+7 more)
ott/geometry/: __init__.py  _decomposition.py  costs.py  epsilon_scheduler.py  geometry.py  geometry_lr.py  graph.py  graph_geometry.py  grid.py  low_rank.py  matrix_square_root.py  ops.py  pointcloud.py  segment.py
ott/math/: __init__.py  decomposition.py  fixed_point_loop.py  implicit_differentiation.py  matrix_square_root.py  potentials.py  utils.py
ott/solvers/: was_solver.py
ott/tools/: __init__.py  discrete_barycenter.py  discrete_barycenter_test.py  dual_kantorovich.py  k_means.py  kmeans.py  plot.py  segment_sinkhorn.py  sinkhorn_divergence.py  soft_sort.py  soft_sort_test.py  transport.py
ott/utils/: __init__.py  segment.py  was_solver.py
ott_jax.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ott/: __init__.py  _version.py  datasets.py  types.py  univariate.py  utils.py
tests/: conftest.py  notebook_test.py  utils_test.py
tests/core/: bures_continuous_barycenter_test.py  continuous_barycenter_test.py  discrete_barycenter_test.py  fused_gromov_wasserstein_test.py  gromov_wasserstein_test.py  gromov_wasserstein_unbalanced_test.py  icnn_test.py  icnns_test.py  initializers_test.py  neuraldual_test.py  potentials_test.py  sinkhorn_anderson_acceleration_test.py  sinkhorn_bures_test.py  sinkhorn_diff_grid_loc_test.py  sinkhorn_diff_grid_weights_test.py  sinkhorn_diff_precond_test.py  sinkhorn_diff_test.py  sinkhorn_differentiability_grid_1_test.py  sinkhorn_differentiability_grid_2_test.py  sinkhorn_differentiability_grid_3_test.py  sinkhorn_differentiability_precond_test.py  sinkhorn_differentiability_test.py  sinkhorn_extra_test.py  sinkhorn_grid_test.py  sinkhorn_hessian_test.py  sinkhorn_implicit_lse_test.py  sinkhorn_implicit_test.py  sinkhorn_jacobian_apply_test.py  sinkhorn_jacobian_test.py  sinkhorn_jit_test.py  sinkhorn_lr_test.py  sinkhorn_online_large_test.py  sinkhorn_potentials_jacobian_test.py  (+3 more)
(+451 files in other folders)
