[metadata]
name                          = ott-jax
version                       = 0.1.0
licens                        = Apache 2.0
license_files                 = LICENSE
author                        = Google LLC
author_email                  = ott-dev@google.com
description                   = OTT: Optimal Transport Tools in Jax.
keywords                      = optimal transport, sinkhorn, wasserstein, jax
long_description              = file: README.md
long_description_content_type = text/markdown
url                           = https://github.com/google-research/ott
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.7

[options.packages.find]
exclude =
    tests, docs, images

[options.extras_require]
test = absl-py; pytest; pytest-xdist; pytest-memray
dev = pre-commit
